--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Deep|Bayes – Summer school on Deep Learning and Bayesian Methods</title>
-        <meta name="description" content=" Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2018" />
+        <meta name="description" content="Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2018" />
+
+        <meta property="og:title" content="Summer school Deep|Bayes" />
+        <meta property="og:description" content="Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2018" />
         <meta property="og:image" content="http://deepbayes.ru/images/school-logo.png" />
+        
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@deepbayes_ru" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32"/>
@@ -263,7 +269,7 @@
                         <div class="block">
                             <p>
                                 Application will open soon. Please, stay tuned! If you wish to receive a notification about application start and other important announcements, please leave your contact information in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEnyY7l7ZfyGFDJbHnoOVfW_XqFaJ7TMBXlNfTMXOtcJl3JA/viewform">form</a>.
-                            </p>                                
+                            </p>                          
                             <p>
                                 Selection of participants is highly competitive. Last year applicants had to complete a small programming assignment and write a detailed review on a machine learning research paper of their choice                                
                             </p>
