--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Summer school Deep|Bayes" />
         <meta property="og:description" content="Summer school on Deep Learning and Bayesian Methods. Russia, Moscow, August 2018" />
         <meta property="og:image" content="http://deepbayes.ru/images/school-logo.png" />
-        
+
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@deepbayes_ru" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -169,6 +169,21 @@
                         <p>Our goal is to show that using the Bayesian approach in deep neural networks can expand the range of their applicability and improve their performance. Although there are many different problem settings in machine learning, probabilistic inference for Bayesian networks can be performed  in a similar way for most of them. Do you want to learn more about these methods? Come to our summer school!</p>
                     </div>
                 </div>
+
+                <div class="row">
+                        <div class="sub-heading">
+                            <h2>Preliminary dates</h2>
+                        </div>
+                        <div class="block">
+                            <p>The following is a very preliminary list of dates based on our experience with the previous run of the school</p>
+                            <ol>
+                                <li>Early February: Applications open</li>
+                                <li>Early April: Applications close</li>
+                                <li>Late May - Early June: Acceptance notification</li>
+                                <li>Late August: Summer School</li>
+                            </ol>
+                        </div>
+                    </div>
                 
             </div>
         </section><!-- #about close -->
