Link to the previous version

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	            <!-- Collect the nav links, forms, and other content for toggling -->
 	            <nav class="collapse navbar-collapse" id="navbar">
 	                <ul class="nav navbar-nav navbar-right" id="top-nav">
-	                    <!-- li class="current"><a href="#hero-area">Start</a></li-->
+	                    <li><a href="./2017/"><strong>Deep|Bayes 2017</strong></a></li>
 	                    <li><a href="#about">About</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
 	                    <li><a href="#apply">Apply</a></li>
