--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </li>
                             <li>
                                 <strong>What is the selection process like?</strong>
-                                <p>Candidates fill an application form, write a short essay (paper review?) and complete a few small assignments to demonstrate their knowledge of machine learning and programming skills. The selection committee will carefully review all the applications and will proceed with the strongest candidates based on their technical skills and motivation.</p>
+                                <p>Candidates fill an application form, write a short essay and complete a few small assignments to demonstrate their knowledge of machine learning and programming skills. The selection committee will carefully review all the applications and will proceed with the strongest candidates based on their technical skills and motivation.</p>
                             </li>
                             <li>
                                 <strong>How competitive is the admission?</strong>
@@ -232,7 +232,7 @@
                                 <p>We will provide coffee breaks and lunches.</p>
                             </li>
                             <li>
-                                <strong>I do not know much about machine learning, but I would like to learn more. Should I participate in Deep|Bayes school</strong>
+                                <strong>I do not know much about machine learning, but I would like to learn more. Should I participate in Deep|Bayes school?</strong>
                                 <p>Unfortunately, no. Our summer school is intended for candidates who have strong knowledge of machine learning and are familiar with neural networks. Such level of participants enables us to delve into to technical details and quickly proceed to advanced topics while being confident that the material is accessible for everyone.  For learning machine learning fundamentals, we encourage you to check out numerous resources available on the web.</p>
                             </li>
                             <li>
