Application is open

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </li>
                             <li>
                                 <strong>What is the selection process like?</strong>
-                                <p>Candidates fill an application form, write a short essay and complete a few small assignments to demonstrate their knowledge of machine learning and programming skills. The selection committee will carefully review all the applications and will proceed with the strongest candidates based on their technical skills and motivation.</p>
+                                <p>Candidates fill an application form, write a short essay (paper review) and complete a few small assignments to demonstrate their knowledge of machine learning and programming skills. The selection committee will carefully review all the applications and will proceed with the strongest candidates based on their technical skills and motivation.</p>
                             </li>
                             <li>
                                 <strong>How competitive is the admission?</strong>
@@ -283,10 +283,16 @@
                         </div>
                         <div class="block">
                             <p>
-                                Application will open soon. Please, stay tuned! If you wish to receive a notification about application start and other important announcements, please leave your contact information in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEnyY7l7ZfyGFDJbHnoOVfW_XqFaJ7TMBXlNfTMXOtcJl3JA/viewform">form</a>.
-                            </p>                          
+                            Application is now open!
+                            To apply for the summer school, please fill in <a href="https://goo.gl/forms/6icdP5x6XbvPvVzP2">the form</a>. We kindly suggest you to start working on your application early, as it contains several assignments and questions implying detailed answers. Once the form is submitted, you will be able to edit your application via the link sent to your email.
+                            </p>
+
                             <p>
-                                Selection of participants is highly competitive. Last year applicants had to complete a small programming assignment and write a detailed review on a machine learning research paper of their choice                                
+                            Application closes 23:59 April 30 (Moscow time).
+                            </p>
+
+                            <p>
+                            Participants are expected to have a strong background in machine learning and deep learning. Basic knowledge of Bayesian methods is also desirable. All practical assignments will be implemented using PyTorch, therefore those not familiar with it should learn it beforehand.
                             </p>
                         </div>
                 </div>
