Added samsung to organizers

--- a/index.html
+++ b/index.html
@@ -89,10 +89,19 @@
 	                </div>
 	                <div class="col-md-4 zoomIn">
                         <div class="organizer">
+                            <h5>Organized by</h5>
                             <div class="logo-box">
                                 <a href="https://hse.ru/"><img src="images/hse.png" /></a>
                             </div>
+
                             <hr/>
+
+                            <div class="logo-box">
+                                <a href="http://samsung.com/"><img src="images/samsung.png" /></a>
+                            </div>
+
+                            <hr/>
+
                             <div class="logo-box">
                                 <a href="http://bayesgroup.ru/"><img src="images/bayesgroup.png" /></a>
                             </div>
