Added Samsung caption

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                             <div class="logo-box">
                                 <a href="http://samsung.com/"><img src="images/samsung.png" /></a>
                             </div>
+                            <div class="caption">
+                                <p>Samsung AI Center in Moscow</p>
+                            </div>
 
                             <hr/>
 
