More specific dates

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	                <div class="col-md-8">
 	                    <div class="block">
 	                        <h1 class="wow fadeInDown">Summer school on <br/><span>Deep Learning</span> and <br/><span>Bayesian Methods</span></h1>
-	                        <p class="wow fadeInDown" data-wow-delay="0.3s">August 2018, Moscow, Russia</p>
+	                        <p class="wow fadeInDown" data-wow-delay="0.3s">August 27th – September 1st 2018, Moscow, Russia</p>
 	                        <!-- div class="wow fadeInDown" data-wow-delay="0.3s">
 	                        	<a class="btn btn-default btn-home" href="#subscribe" role="button">Apply</a>
 	                        </div -->
@@ -189,10 +189,10 @@
                         <div class="block">
                             <p>The following is a very preliminary list of dates based on our experience with the previous run of the school</p>
                             <ol>
-                                <li>Early February: Applications open</li>
-                                <li>Early April: Applications close</li>
-                                <li>Late May - Early June: Acceptance notification</li>
-                                <li>Late August: Summer School</li>
+                                <li>March 1st: Applications open</li>
+                                <li>April 30th: Applications close</li>
+                                <li>Early June: Acceptance notification</li>
+                                <li>August 27th – September 1st: Summer School</li>
                             </ol>
                         </div>
                     </div>
