--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
                 
             </div>
         </section><!-- #about close -->
+        
+        <section id="schedule" class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="sub-heading">
+                        <h2>Preliminary Schedule</h2>
+                    </div>
+                    <div class="block">
+                    <iframe src="https://calendar.google.com/calendar/embed?title=Deep%7CBayes%20Summer%20School&amp;showTitle=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=c2cef5m9artfehdgerhkpsuiqg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FMoscow&amp;dates=20180827%2F20180901" style="border-width:0" width="100%" height="500" frameborder="0" scrolling="no"></iframe> 
+
+
+                        <p>
+                           A pdf version of the school can be found <a href="./files/schedule-2018.pdf">here</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section><!-- #speakers close -->
 	
         <!-- 
         faq start
