Added people section

--- a/index.html
+++ b/index.html
@@ -287,20 +287,237 @@
             </div>
         </section><!-- #faq close -->
         
+        <!-- 
+        Lecturers start
+        ==================== -->
         <section id="speakers" class="section">
             <div class="container">
+                <div class="sub-heading">
+                    <h2>People</h2>
+                </div>
                 <div class="row">
-                    <div class="sub-heading">
-                        <h2>Speakers and Lecturers</h2>
-                    </div>
-                    <div class="block">
-                        <p>Most of our lecturers and tutors are members of the <a href="http://bayesgroup.ru">Bayesian Methods Research Group</a> and researchers from the world’s leading  research centers. Many school lecturers have published at top international machine learning conferences such as NIPS, ICML, ICCV, CVPR, ICLR, AISTATS, and others. 
+                    <div class="col-md-12">
+                    <p>Most of our lecturers and tutors are members of the <a href="http://bayesgroup.ru">Bayesian Methods Research Group</a> and researchers from the world’s leading  research centers. Many school lecturers have published at top international machine learning conferences such as NIPS, ICML, ICCV, CVPR, ICLR, AISTATS, and others. 
                             
-                        Today, the Bayesian Methods Research group is one of the leading machine learning research groups in Russia. Members of the group have developed a range of university courses in Bayesian Methods, Deep Learning, Optimization and Probabilistic Graphical Models and have substantial teaching experience.  
-                        Our research group is actively collaborating with such companies as Samsung Electronics, Yandex, SberTech, Kaspersky, Schlumberger, and others.
-                        </p>
+                    Today, the Bayesian Methods Research group is one of the leading machine learning research groups in Russia. Members of the group have developed a range of university courses in Bayesian Methods, Deep Learning, Optimization and Probabilistic Graphical Models and have substantial teaching experience.  
+                    Our research group is actively collaborating with such companies as Samsung Electronics, Yandex, SberTech, Kaspersky, Schlumberger, and others.
+                    </p>
                     </div>
                 </div>
+
+                <div class="sub-heading">
+                    <h2>Invited Speakers</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/welling.jpg" />
+                        </div>
+                        <div class="info">
+                            Max Welling<br/>
+                            <span class="job-affiliation">University of Amsterdam</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/kalchbrenner.jpg" />
+                        </div>
+                        <div class="info">
+                            Nal Kalchbrenner<br/>
+                            <span class="job-affiliation">Google DeepMind</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/achille.jpg" />
+                        </div>
+                        <div class="info">
+                           Alessandro Achille<br/>
+                           <span class="job-affiliation">University of California, Los Angeles</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Lecturers</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/vetrov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Vetrov<br/>
+                            Research Professor, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/kropotov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Kropotov<br/>
+                            Researcher, <span class="job-affiliation">Lomonosov Moscow State University</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/burnaev.jpg" />
+                        </div>
+                        <div class="info">
+                            Evgeny Burnaev<br/>
+                            Associate, <span class="job-affiliation">Professor Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/neklyudov.jpg" />
+                        </div>
+                        <div class="info">
+                            Kirill Neklyudov<br/>
+                            Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ulyanov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Ulyanov<br/>
+                            PhD student, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/rodomanov.jpg" />
+                        </div>
+                        <div class="info">
+                            Anton Rodomanov<br/>
+                            Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/molchanov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Molchanov<br/>
+                            Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Teaching Fellows</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/lobacheva.jpg" />
+                        </div>
+                        <div class="info">
+                            Ekaterina Lobacheva<br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/struminsky.jpg" />
+                        </div>
+                        <div class="info">
+                            Kirill Struminsky<br/>
+                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ashuha.jpg" />
+                        </div>
+                        <div class="info">
+                            Arsenii Ashukha<br/>
+                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/ulyanov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Ulyanov<br/>
+                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Skoltech</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/neklyudov.jpg" />
+                        </div>
+                        <div class="info">
+                            Kirill Neklyudov<br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/molchanov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Molchanov<br/>
+                            <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub-heading">
+                    <h2>Organizing Committee</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/vetrov.jpg" />
+                        </div>
+                        <div class="info">
+                            Dmitry Vetrov<br/>
+                            Head of the School 
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/chirkova.jpg" />
+                        </div>
+                        <div class="info">
+                            Nadya Chirkova<br/>
+                            <span class="job-affiliation">Nadezhda Chirkova</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/lobacheva.jpg" />
+                        </div>
+                        <div class="info">
+                            Ekaterina Lobacheva<br/>
+                            <span class="job-affiliation">Organization Managaer</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/volzhenina.jpg" />
+                        </div>
+                        <div class="info">
+                            Ekaterina Volzhenina<br/>
+                            <span class="job-affiliation">Organization Managaer</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="photo">
+                            <img src="photos/sobolev.jpg" />
+                        </div>
+                        <div class="info">
+                            Artem Sobolev<br/>
+                            <span class="job-affiliation">Random Stuff</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section><!-- #speakers close -->
 
