Bugfix + css for speakers

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 	                    <li><a href="./2017/"><strong>Deep|Bayes 2017</strong></a></li>
 	                    <li><a href="#about">About</a></li>
 	                    <li><a href="#faq">FAQ</a></li>
+	                    <li><a href="#speakers">People</a></li>
 	                    <li><a href="#apply">Apply</a></li>
 	                    <li><a href="#partners">Partners</a></li>
 	                    <li><a href="#contact">Contact</a></li>
@@ -309,30 +310,30 @@
                     <h2>Invited Speakers</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-4 col-md-4">
                         <div class="photo">
                             <img src="photos/welling.jpg" />
                         </div>
                         <div class="info">
-                            Max Welling<br/>
+                            <span class="speaker-name">Max Welling</span><br/>
                             <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-4 col-md-4">
                         <div class="photo">
                             <img src="photos/kalchbrenner.jpg" />
                         </div>
                         <div class="info">
-                            Nal Kalchbrenner<br/>
+                            <span class="speaker-name">Nal Kalchbrenner</span><br/>
                             <span class="job-affiliation">Google DeepMind</span>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-4 col-md-4">
                         <div class="photo">
                             <img src="photos/achille.jpg" />
                         </div>
                         <div class="info">
-                           Alessandro Achille<br/>
+                           <span class="speaker-name">Alessandro Achille</span><br/>
                            <span class="job-affiliation">University of California, Los Angeles</span>
                         </div>
                     </div>
@@ -347,7 +348,7 @@
                             <img src="photos/vetrov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Vetrov<br/>
+                            <span class="speaker-name">Dmitry Vetrov</span><br/>
                             Research Professor, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -356,7 +357,7 @@
                             <img src="photos/kropotov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Kropotov<br/>
+                            <span class="speaker-name">Dmitry Kropotov</span><br/>
                             Researcher, <span class="job-affiliation">Lomonosov Moscow State University</span>
                         </div>
                     </div>
@@ -365,7 +366,7 @@
                             <img src="photos/burnaev.jpg" />
                         </div>
                         <div class="info">
-                            Evgeny Burnaev<br/>
+                            <span class="speaker-name">Evgeny Burnaev</span><br/>
                             Associate, <span class="job-affiliation">Professor Skoltech</span>
                         </div>
                     </div>
@@ -374,7 +375,7 @@
                             <img src="photos/neklyudov.jpg" />
                         </div>
                         <div class="info">
-                            Kirill Neklyudov<br/>
+                            <span class="speaker-name">Kirill Neklyudov</span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -383,7 +384,7 @@
                             <img src="photos/ulyanov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Ulyanov<br/>
+                            <span class="speaker-name">Dmitry Ulyanov</span><br/>
                             PhD student, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
@@ -392,7 +393,7 @@
                             <img src="photos/rodomanov.jpg" />
                         </div>
                         <div class="info">
-                            Anton Rodomanov<br/>
+                            <span class="speaker-name">Anton Rodomanov</span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -401,7 +402,7 @@
                             <img src="photos/molchanov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Molchanov<br/>
+                            <span class="speaker-name">Dmitry Molchanov</span><br/>
                             Research Fellow, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -416,7 +417,7 @@
                             <img src="photos/lobacheva.jpg" />
                         </div>
                         <div class="info">
-                            Ekaterina Lobacheva<br/>
+                            <span class="speaker-name">Ekaterina Lobacheva</span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -425,7 +426,7 @@
                             <img src="photos/struminsky.jpg" />
                         </div>
                         <div class="info">
-                            Kirill Struminsky<br/>
+                            <span class="speaker-name">Kirill Struminsky</span><br/>
                             <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -434,7 +435,7 @@
                             <img src="photos/ashuha.jpg" />
                         </div>
                         <div class="info">
-                            Arsenii Ashukha<br/>
+                            <span class="speaker-name">Arsenii Ashukha</span><br/>
                             <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -443,7 +444,7 @@
                             <img src="photos/ulyanov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Ulyanov<br/>
+                            <span class="speaker-name">Dmitry Ulyanov</span><br/>
                             <span class="job-title">PhD student</span>, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
@@ -452,7 +453,7 @@
                             <img src="photos/neklyudov.jpg" />
                         </div>
                         <div class="info">
-                            Kirill Neklyudov<br/>
+                            <span class="speaker-name">Kirill Neklyudov</span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -461,7 +462,7 @@
                             <img src="photos/molchanov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Molchanov<br/>
+                            <span class="speaker-name">Dmitry Molchanov</span><br/>
                             <span class="job-title">Research Fellow</span>, <span class="job-affiliation">Higher School of Economics</span>
                         </div>
                     </div>
@@ -471,12 +472,12 @@
                     <h2>Organizing Committee</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-2">
                         <div class="photo">
                             <img src="photos/vetrov.jpg" />
                         </div>
                         <div class="info">
-                            Dmitry Vetrov<br/>
+                            <span class="speaker-name">Dmitry Vetrov</span><br/>
                             Head of the School 
                         </div>
                     </div>
@@ -485,16 +486,16 @@
                             <img src="photos/chirkova.jpg" />
                         </div>
                         <div class="info">
-                            Nadya Chirkova<br/>
-                            <span class="job-affiliation">Nadezhda Chirkova</span>
+                            <span class="speaker-name">Nadezhda Chirkova</span><br/>
+                            <span class="job-affiliation">Organization Managaer</span>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-2">
                         <div class="photo">
                             <img src="photos/lobacheva.jpg" />
                         </div>
                         <div class="info">
-                            Ekaterina Lobacheva<br/>
+                            <span class="speaker-name">Ekaterina Lobacheva</span><br/>
                             <span class="job-affiliation">Organization Managaer</span>
                         </div>
                     </div>
@@ -503,16 +504,16 @@
                             <img src="photos/volzhenina.jpg" />
                         </div>
                         <div class="info">
-                            Ekaterina Volzhenina<br/>
+                            <span class="speaker-name">Ekaterina Volzhenina</span><br/>
                             <span class="job-affiliation">Organization Managaer</span>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-2">
                         <div class="photo">
                             <img src="photos/sobolev.jpg" />
                         </div>
                         <div class="info">
-                            Artem Sobolev<br/>
+                            <span class="speaker-name">Artem Sobolev</span><br/>
                             <span class="job-affiliation">Random Stuff</span>
                         </div>
                     </div>
