Changed affilication for Arsenii

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Arsenii Ashukha</span><br/>
-                            <span class="job-title">PhD student</span>, <span class="job-affiliation">Higher School of Economics</span>
+                            <span class="job-title">PhD Candidate</span>, <span class="job-affiliation">University of Amsterdam</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
