--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Nadezhda Chirkova</span><br/>
-                            <span class="job-affiliation">Organization Managaer</span>
+                            <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-2">
@@ -496,7 +496,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Ekaterina Lobacheva</span><br/>
-                            <span class="job-affiliation">Organization Managaer</span>
+                            <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -505,7 +505,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Ekaterina Volzhenina</span><br/>
-                            <span class="job-affiliation">Organization Managaer</span>
+                            <span class="job-affiliation">Organization Manager</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-2">
