Bugfix for Burnaev

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                         </div>
                         <div class="info">
                             <span class="speaker-name">Evgeny Burnaev</span><br/>
-                            Associate, <span class="job-affiliation">Professor Skoltech</span>
+                            Associate Professor, <span class="job-affiliation">Skoltech</span>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
